--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bgTextBox navbar-light fixed-top">
     <!-- Brand -->
-    <a class="navbar-brand" href="#home">Network Norm Model </a>
+    <span class="navbar-brand" onclick='loadDoc("main","/pages/main.html")' style="cursor: pointer;">North Sea Oceanographic Data Visualisation</span>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -13,14 +13,10 @@
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbardrop2" data-toggle="dropdown">
-                    Models
+                    Visualisation
                 </a>
                 <div class="dropdown-menu">
-                <a class="nav-link" href="#schelling">Schelling</a>
-                <a class="nav-link" href="#axelrod">Axelrod</a>
-                <a class="nav-link" href="#axelrodnet">Network model</a>
-                <a class="nav-link" href="#metabolism">Metabolism model</a>
-                <a class="nav-link" href="netgiabbanelli">Giabbanelli model</a>
+                <a class="nav-link" onclick='loadDoc("main","/pages/test.html")'>Test</a>
                 </div>
             </li>
             <li><a class="nav-link" href="#bibliography">Bibliography</a></li>
