path to pages corrected

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script src="js/load.js"></script>
     <script>
         loadDoc("menu", "menu.html")
-        loadDoc("main","/pages/main.html")
+        loadDoc("main","pages/main.html")
     </script>
 
 </body>
