--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
                     Visualisation
                 </a>
                 <div class="dropdown-menu">
-                <a class="nav-link" onclick='loadDoc("main","/pages/test.html")'>Test</a>
+                <a class="nav-link" onclick='loadDoc("main","pages/test.html")'>Test</a>
                 </div>
             </li>
             <li><a class="nav-link" href="#bibliography">Bibliography</a></li>
