path to pages in menu id changed

--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bgTextBox navbar-light fixed-top">
     <!-- Brand -->
-    <span class="navbar-brand" onclick='loadDoc("main","/pages/main.html")' style="cursor: pointer;">North Sea Oceanographic Data Visualisation</span>
+    <span class="navbar-brand" onclick='loadDoc("main","pages/main.html")' style="cursor: pointer;">North Sea Oceanographic Data Visualisation</span>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
