add d3 and refresher d3 page

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/load.js"></script>
     <script>
-        loadDoc("menu", "menu.html")
-        loadDoc("main","pages/main.html")
+        loadDoc("menu", "menu.html",testfun)
+        loadDoc("main","pages/main.html",mainfun)
+        console.log("here1")
     </script>
 
 </body>
