--- a/index.html
+++ b/index.html
@@ -9,40 +9,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,700&display=swap" rel="stylesheet">
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap');
+<link href="css/main.css" rel="stylesheet">
 
-    html {
-        scroll-behavior: smooth;
-    }
 
-    .bgTextBox {
-        background-color: rgb(241, 241, 241);
-        padding: 10px;
-    }
-
-    .bgDemo {
-        border-style: solid;
-        border-width: 0.5px;
-        padding: 10px;
-    }
-
-    .highlight pre {
-        white-space: pre-wrap;
-    }
-
-    .nav-item {
-        cursor: pointer;
-    }
-
-    .ref {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        font-size: x-small;
-        font-style: italic;
-    }
-</style>
 </head>
 
 <body>
@@ -62,7 +31,6 @@
     <script>
         loadDoc("menu", "menu.html",testfun)
         loadDoc("main","pages/main.html",mainfun)
-        console.log("here1")
     </script>
 
 </body>
