--- a/pages/d3refresh.html
+++ b/pages/d3refresh.html
@@ -1,4 +1,4 @@
-<svg id="chart" style="border-style: solid;"></svg>
+<svg id="chart" style="border-style: solid; width : 600px;"></svg>
 <script>
 
 </script>
