--- a/pages/d3refresh.html
+++ b/pages/d3refresh.html
@@ -1,4 +1,7 @@
 <svg id="chart" style="border-style: solid; width : 600px;"></svg>
-<script>
-
-</script>
+<br>
+<br>
+<button type="button" class="btn btn-primary" id = "btnRemove">Remove</button>
+<br>
+<br>
+<button type="button" class="btn btn-primary" id = "btnAdd">Add</button>
