--- a/pages/d3refresh.html
+++ b/pages/d3refresh.html
@@ -5,3 +5,6 @@
 <br>
 <br>
 <button type="button" class="btn btn-primary" id = "btnAdd">Add</button>
+<br>
+<br>
+<button type="button" class="btn btn-primary" id = "btnChange">Change</button>
