--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <script src="js/load.js"></script>
     <script>
         loadDoc("menu", "menu.html",testfun)
-        //loadDoc("main","pages/main.html",mainfun)
-        loadDoc("main","pages/d3refresh.html",d3refresh)
+        loadDoc("main","pages/main.html",mainfun)
+        //loadDoc("main","pages/d3refresh.html",d3refresh)
     </script>
 
 </body>
