--- a/pages/d3refresh.html
+++ b/pages/d3refresh.html
@@ -7,4 +7,4 @@
 <button type="button" class="btn btn-primary" id = "btnAdd">Add</button>
 <br>
 <br>
-<button type="button" class="btn btn-primary" id = "btnChange">Change</button>
+<button type="button" class="btn btn-primary" id = "btnChange">Change Data</button>
