--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
                 <div class="dropdown-menu">
                     <a class="nav-link" onclick='loadDoc("main","pages/test.html",testfun)'>Test</a>
                     <a class="nav-link" onclick='loadDoc("main","pages/d3refresh.html",d3refresh)'>D3 Refresher</a>
+                    <a class="nav-link" onclick='loadDoc("main","pages/d3joy.html",d3joy)'>D3 Joy</a>
                 </div>
             </li>
             <li><a class="nav-link" href="#bibliography">Bibliography</a></li>
