A demo of D£ databinding and functions linked to window scrolling and positional tests on buttons

--- a/pages/main.html
+++ b/pages/main.html
@@ -8,15 +8,5 @@
 
         <div class="col-sm-4">
             <!-- <img src="img/img1.png" width="100%"> -->
-            image
-
-        </div>
-
-
-        <div class="col-sm-8 bgTextBox">
-            <p>Text.</p>
-
-        </div>
-
-    </div>
+…    </div>
     <br>
