--- a/pages/d3joy.html
+++ b/pages/d3joy.html
@@ -1,7 +1,7 @@
 <br>
 
 
-<h2>The joy of D3</h2>
+<h2>The fun of D3</h2>
 <p>
     On this page we are demonstrating: d3 data binding, data update, transitioning , fixed element and positional
     triggering. We are using the HTML element li (list) inplace of a SVG for simplicity of explanation
