cleaned up index page removed links to test pages

--- a/pages/main.html
+++ b/pages/main.html
@@ -1,12 +1,23 @@
 
     <h2>North Sea Oceanographic Data Visualisation</h2>
     <p>
-        Text
+        This page contains links to D3 visulisation demonstration pages
     </p>
-    <h5>Test</h5>
+    <h3>D3 Demo</h3>
     <div class="row">
 
-        <div class="col-sm-4">
-            <!-- <img src="img/img1.png" width="100%"> -->
-…    </div>
+        <div class="col-sm-4"><a onclick='loadDoc("main","pages/d3joy.html",d3joy)'>
+            <img src="../img/img01.png" width="100%">
+            </a> 
+…       </div>
+        <div class="col-sm-8">
+            <div class="bgTextBox">
+                <h4><a onclick='loadDoc("main","pages/d3joy.html",d3joy)'>D3 fun</a></h4>
+            
+            <p>
+    On <a onclick='loadDoc("main","pages/d3joy.html",d3joy)'>this</a> page we are demonstrating: d3 data binding, data update, transitioning , fixed element and positional
+    triggering. We are using the HTML element li (list) inplace of a SVG for simplicity of explanation
+</p>
+</div>
+        </div>
     <br>
