--- a/menu.html
+++ b/menu.html
@@ -13,15 +13,19 @@
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbardrop2" data-toggle="dropdown">
-                    Visualisation
+                    Visualisations
                 </a>
                 <div class="dropdown-menu">
+<!--
                     <a class="nav-link" onclick='loadDoc("main","pages/test.html",testfun)'>Test</a>
                     <a class="nav-link" onclick='loadDoc("main","pages/d3refresh.html",d3refresh)'>D3 Refresher</a>
+-->
                     <a class="nav-link" onclick='loadDoc("main","pages/d3joy.html",d3joy)'>D3 fun</a>
                 </div>
             </li>
+<!--
             <li><a class="nav-link" href="#bibliography">Bibliography</a></li>
+-->
         </ul>
     </div>
 </nav>
