--- a/pages/d3joy.html
+++ b/pages/d3joy.html
@@ -48,12 +48,13 @@
         <br>
         <div class="bgTextBox">
             <h4>Updating</h4>
-<p>
-    The D3 data graphic will change when the data that is bound to it changes. Scroll up, or click the button below to add a data element to the third position
+            <p>
+                The D3 data graphic will change when the data that is bound to it changes. Scroll up, or click the
+                button below to add a data element to the third position
 
 
 
-</p>
+            </p>
             <button type="button" class="btn btn-primary" id="btnAdd">Add Data</button>
             <br>
             <br>
@@ -63,7 +64,7 @@
             <br>
             <br>
             <br>
-            <p>The javascript that changes the bound data  is:</p>
+            <p>The javascript that changes the bound data is:</p>
             <pre>
         <code>
     list.join(
@@ -86,7 +87,7 @@
             <br>
             <br>
             <br>
-            <p>The javascript that removes the bound data  is:</p>
+            <p>The javascript that removes the bound data is:</p>
             <pre>
         <code>
     list.join(
@@ -99,21 +100,21 @@
     )
         </code>
     </pre>
-    <br>
-    <h4> scroll back to the top to reset the graphic</h4>
+            <br>
+            <h4> scroll back to the top to reset the graphic</h4>
         </div>
 
-    <br>
-    <br>
-    <div class="bgTextBox">
-        <h4>Hilighting</h4>
-        <p>Scroll up again or click the button below to change view and hilight a single element</p>
-        <button type="button" class="btn btn-primary" id="btnHighlight">Hilight Data</button>
         <br>
         <br>
-        <br>
-        <p>The javascript that changes the apperance of all of the  the bound data  is:</p>
-        <pre>
+        <div class="bgTextBox">
+            <h4>Hilighting</h4>
+            <p>Scroll up again or click the button below to change view and hilight a single element</p>
+            <button type="button" class="btn btn-primary" id="btnHighlight">Hilight Data</button>
+            <br>
+            <br>
+            <br>
+            <p>The javascript that changes the apperance of all of the the bound data is:</p>
+            <pre>
     <code>
 var changeAllColors = function () {
     var d3Select = d3.select("#list");
@@ -128,17 +129,17 @@ var changeAllColors = function () {
 }
     </code>
 </pre>
-<br>
-<h4> scroll back to the top to reset the graphic</h4>
-    </div>
+            <br>
+            <h4> scroll back to the top to reset the graphic</h4>
+        </div>
 
-<br>
-<br>
-    <div class="bgTextBox">
-        <h4>Transitioning and triggering</h4>
+        <br>
+        <br>
+        <div class="bgTextBox">
+            <h4>Transitioning and triggering</h4>
 
-        <p>The compleate javascript for this is:</p>
-        <pre>
+            <p>The compleate javascript for this is:</p>
+            <pre>
     <code>
 
         var d3joy = function () {
@@ -262,6 +263,6 @@ var changeAllColors = function () {
         }
     </code>
 </pre>
+        </div>
     </div>
-</div>
 </div>
