bug fix img path

--- a/pages/main.html
+++ b/pages/main.html
@@ -6,7 +6,7 @@
 <div class="row">
 
     <div class="col-sm-4"><a onclick='loadDoc("main","pages/d3joy.html",d3joy)'>
-            <img src="../img/img01.png" width="100%">
+            <img src="img/img01.png" width="100%">
         </a>
         … </div>
     <div class="col-sm-8">
