--- a/pages/d3refresh.html
+++ b/pages/d3refresh.html
@@ -1,10 +1,6 @@
-<svg id="chart" style="border-style: solid; width : 600px;"></svg>
+<svg id="chart" style="border-style: solid; width : 450px;height : 450px;"></svg>
 <br>
 <br>
 <button type="button" class="btn btn-primary" id = "btnRemove">Remove</button>
-<br>
-<br>
 <button type="button" class="btn btn-primary" id = "btnAdd">Add</button>
-<br>
-<br>
 <button type="button" class="btn btn-primary" id = "btnChange">Change Data</button>
