--- a/menu.html
+++ b/menu.html
@@ -21,6 +21,7 @@
                     <a class="nav-link" onclick='loadDoc("main","pages/d3refresh.html",d3refresh)'>D3 Refresher</a>
 
                     <a class="nav-link" onclick='loadDoc("main","pages/d3joy.html",d3joy)'>D3 fun</a>
+                    <a class="nav-link" onclick='loadDoc("main","pages/d3graph01.html",d3graph)'>D3 Graph</a>
                 </div>
             </li>
 <!--
