Update functions added g as well

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <script>
         loadDoc("menu", "menu.html", testfun)
         //loadDoc("main","pages/main.html",mainfun)
-        loadDoc("main", "pages/d3joy.html", d3joy)
+        loadDoc("main","pages/d3refresh.html",d3refresh)
+        //loadDoc("main", "pages/d3joy.html", d3joy)
     </script>
 
 </body>
