Add join metoid with d3

--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="http://marvl.infotech.monash.edu/webcola/cola.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/graph.js"></script>
+    <script src="js/refresh.js"></script>
     <script src="js/load.js"></script>
     <script>
         loadDoc("menu", "menu.html", testfun)
         //loadDoc("main","pages/main.html",mainfun)
-        loadDoc("main","pages/d3refresh.html",d3refresh)
+        //loadDoc("main","pages/d3refresh.html",d3refresh)
         //loadDoc("main", "pages/d3joy.html", d3joy)
+        loadDoc("main","pages/d3graph01.html",d3graph)
     </script>
 
 </body>
