--- a/pages/d3graph01.html
+++ b/pages/d3graph01.html
@@ -1,3 +1,4 @@
 <div id="my_dataviz"></div>
 <br>
+<p>Mouse over image and scroll for zoom and mouse down and move for pan and scroll</p>
 <button type="button" class="btn btn-primary" id="btnChange">Change</button>
