--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <script src="http://marvl.infotech.monash.edu/webcola/cola.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/graph.js"></script>
-    <script src="js/graph2.js"></script>
     <script src="js/refresh.js"></script>
     <script src="js/load.js"></script>
     <script>
@@ -37,7 +36,7 @@
         //loadDoc("main","pages/main.html",mainfun)
         //loadDoc("main","pages/d3refresh.html",d3refresh)
         //loadDoc("main", "pages/d3joy.html", d3joy)
-        loadDoc("main","pages/d3graph01.html",d3graph2)
+        loadDoc("main","pages/d3graph01.html",d3graph)
     </script>
 
 </body>
