Change on scroll

--- a/pages/d3graph02.html
+++ b/pages/d3graph02.html
@@ -1,7 +1,224 @@
-<div id="network_viz"></div>
-<div id="year"></div>
-<br>
-<p>Mouse over image and scroll for zoom and mouse down and move for pan and scroll</p>
-<p>Click buttons below to change year</p>
-<button type="button" class="btn btn-primary" id="btnBack">Back</button>
-<button type="button" class="btn btn-primary" id="btnFoward">Foward</button>
+<div class="row">
+    <div class="col-sm-8">
+        <div id="listarea" style="position: fixed;">
+            <div id="network_viz"></div>
+            <div id="year"></div>
+            <br>
+            <p>Mouse over image and scroll for zoom and mouse down and move for pan and scroll</p>
+            <p>Click buttons below to change year</p>
+            <button type="button" class="btn btn-primary" id="btnBack">Back</button>
+            <button type="button" class="btn btn-primary" id="btnFoward">Foward</button>
+        </div>
+    </div>
+    <div class="col-sm-4">
+
+        <div class="bgTextBox">
+            <h4>2000</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2000">2000</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>
+        <div class="bgTextBox">
+            <h4>2001</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2001">2001</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br><div class="bgTextBox">
+            <h4>2002</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2002">2002</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>
+        <div class="bgTextBox">
+            <h4>2003</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2003">2003</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+
+        <br>        
+        <br>        
+        <div class="bgTextBox">
+            <h4>2004</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2004">2004</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br>        
+        <div class="bgTextBox">
+            <h4>2005</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2005">2005</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br>        
+        <div class="bgTextBox">
+            <h4>2006</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2006">2006</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br>        
+        <div class="bgTextBox">
+            <h4>2007</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2007">2007</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br>        
+        <div class="bgTextBox">
+            <h4>2008</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2008">2008</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br>        
+        <div class="bgTextBox">
+            <h4>2009</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2009">2009</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br> 
+        <div class="bgTextBox">
+            <h4>2010</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. </p>
+            <button type="button" class="btn btn-primary" id="btn2010">2010</button>
+            <br>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat. </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>        
+        <br      
+        <div class="bgTextBox">
+            
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
+                vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis.
+                Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut
+                porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue
+                eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in,
+                condimentum in erat.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus vel, fermentum nulla. Pellentesque id tempor nunc, sit amet convallis velit. Phasellus ac dui felis. Donec at tincidunt lacus, non convallis metus. Aliquam ut pellentesque justo. Etiam consequat nibh ut porta molestie. Donec justo dui, finibus vel sollicitudin ut, malesuada at lectus. Nunc mollis augue eros, sed lacinia dui posuere sed. Duis vel sagittis quam. Pellentesque mi diam, aliquet eu cursus in, condimentum in erat.  </p>
+
+        </div>
+        <!-- </div> Textbox -->
+        <br>
+    </div>
+</div>
+
+</div>
