add instructions to change year

--- a/pages/d3graph02.html
+++ b/pages/d3graph02.html
@@ -5,13 +5,13 @@
             <div id="year"></div>
             <br>
             <p>Mouse over image and scroll for zoom and mouse down and move for pan and scroll</p>
-            <p>Click buttons below to change year</p>
+            <p>Scroll down on column on right or click buttons below to change year</p>
             <button type="button" class="btn btn-primary" id="btnBack">Back</button>
             <button type="button" class="btn btn-primary" id="btnFoward">Foward</button>
         </div>
     </div>
     <div class="col-sm-4">
-
+<H2>Scroll down here to change year</H2>
         <div class="bgTextBox">
             <h4>2000</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt turpis tempus, pretium purus
