--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="http://marvl.infotech.monash.edu/webcola/cola.min.js"></script>
+    <!-- <script src="http://marvl.infotech.monash.edu/webcola/cola.min.js"></script> -->
     <script src="js/main.js"></script>
     <script src="js/graph.js"></script>
     <script src="js/graphreader.js"></script>
