--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/main.js"></script>
     <script src="js/graph.js"></script>
     <script src="js/graphreader.js"></script>
+    <script src="js/scatter.js"></script>
     <script src="js/refresh.js"></script>
     <script src="js/load.js"></script>
     <script>
@@ -37,7 +38,8 @@
         //loadDoc("main","pages/main.html",mainfun)
         //loadDoc("main","pages/d3refresh.html",d3refresh)
         //loadDoc("main", "pages/d3joy.html", d3joy)
-        loadDoc("main","pages/d3graph02.html",d3graphreader)
+        //loadDoc("main","pages/d3graph02.html",d3graphreader)
+        loadDoc("main","pages/d3scatter.html",d3scatter)
     </script>
 
 </body>
