--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         //loadDoc("main","pages/main.html",mainfun)
         //loadDoc("main","pages/d3refresh.html",d3refresh)
         //loadDoc("main", "pages/d3joy.html", d3joy)
-        //loadDoc("main","pages/d3graph02.html",d3graphreader)
-        loadDoc("main","pages/d3scatter.html",d3scatter)
+        loadDoc("main","pages/d3graph02.html",d3graphreader)
+        //loadDoc("main","pages/d3scatter.html",d3scatter)
     </script>
 
 </body>
