--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <script src="js/load.js"></script>
     <script>
         loadDoc("menu", "menu.html", testfun)
-        //loadDoc("main","pages/main.html",mainfun)
+        loadDoc("main","pages/main.html",mainfun)
         //loadDoc("main","pages/d3refresh.html",d3refresh)
         //loadDoc("main", "pages/d3joy.html", d3joy)
-        loadDoc("main","pages/d3graph02.html",d3graphreader)
+        //loadDoc("main","pages/d3graph02.html",d3graphreader)
         //loadDoc("main","pages/d3scatter.html",d3scatter)
     </script>
 
